Fix text colors for light and dark mode

--- a/src/resources/styles/login.css
+++ b/src/resources/styles/login.css
@@ -37,10 +37,12 @@
 }
 
 .login__input {
+    color: var(--text-color);
     border-left: none;
     border-right: none;
     border-top: none;
     border-bottom: 2px solid black;
+    background-color: transparent;
     height: 2rem;
 }
 
@@ -69,6 +71,7 @@
 
 .login__button {
     padding: .5rem;
+    color: var(--text-color);
     border:2px solid var(--accent-color);
     background-color: transparent;
     border-radius: 50px;
